# container4ml

./: .gitignore  README.md
1-simple/: Dockerfile  pyproject.toml
2-jupyter/: Dockerfile  docker-compose.yml  pyproject.toml  train.ipynb
3-fastapi/: .env.example  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  test-scale.sh  test-switch.sh
3-fastapi/infra/: .env.example  01_setting.tf.tmpl  02_cloudrun.tf.tmpl  03_db.tf.tmpl  Makefile
