[tool.poetry]
name = "container4ml-fastapi"
version = "0.1.0"
description = ""
authors = ["chck <shimekiri.today@gmail.com>"]

[tool.taskipy.tasks]
dev = { cmd = "uvicorn main:app --reload", help = "run application for development" }

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
gunicorn = "^20.1.0"
redis = "^4.0.2"
fasttext = {git = "https://github.com/facebookresearch/fastText.git", rev = "v0.9.2"}
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
